fix header alignment

--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -1,1 +1,10 @@
-header.banner{background-color:#fff}
+header.banner{
+  background-color: $header-bg;
+  .logo-brand{
+    img {
+      max-width: 100%;
+      @include scut-padding(26px n);
+      height: auto;
+    }
+  }
+}
